--- a/burhan/srcs/env/Makefile
+++ b/burhan/srcs/env/Makefile
@@ -6,7 +6,7 @@
 #    By: bhajili <bhajili@student.42abudhabi.ae>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/22 20:08:31 by bhajili           #+#    #+#              #
-#    Updated: 2025/06/22 20:09:15 by bhajili          ###   ########.fr        #
+#    Updated: 2025/06/26 12:42:53 by bhajili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,8 @@ LIBFT       = $(LIBFT_DIR)/libft.a
 
 # Sources & Objects
 SRCS        = env_utils_00.c \
-              env_utils_01.c
+              env_utils_01.c \
+              env_utils_02.c
 
 OBJS        = $(SRCS:%.c=$(OBJ_DIR)/%.o)
 
