--- a/burhan/srcs/exec/Makefile
+++ b/burhan/srcs/exec/Makefile
@@ -5,20 +5,25 @@
 #                                                     +:+ +:+         +:+      #
 #    By: bhajili <bhajili@student.42abudhabi.ae>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2025/05/24 21:55:36 by bhajili           #+#    #+#              #
-#    Updated: 2025/06/26 13:20:40 by bhajili          ###   ########.fr        #
+#    Created: 2025/03/10 09:53:44 by bhajili           #+#    #+#              #
+#    Updated: 2025/06/26 12:53:31 by bhajili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # Directories
-SRC_DIR        = .
-OBJ_DIR        = ./objs
-EXPANDER_DIR      = ../expander
-EXPANDER_OBJ_DIR  = $(EXPANDER_DIR)/objs
+SRC_DIR         = .
+OBJ_DIR         = ./objs
+ENV_DIR         = ../env
+PARSER_DIR      = ../parser
+SIGNALS_DIR     = ../signals
+
+ENV_OBJ_DIR     = $(ENV_DIR)/objs
+PARSER_OBJ_DIR  = $(PARSER_DIR)/objs
+SIGNALS_OBJ_DIR = $(SIGNALS_DIR)/objs
 
 # Sources & Objects
-SRCS        = parser.c \
-			  parser_utils_00.c
+SRCS        = exec_manager.c \
+              exec_command.c
 
 OBJS        = $(SRCS:%.c=$(OBJ_DIR)/%.o)
 
@@ -26,27 +31,31 @@ OBJS        = $(SRCS:%.c=$(OBJ_DIR)/%.o)
 include ../../Makefile.inc
 
 # Default rule
-all: expander_objs $(OBJ_DIR) $(OBJS)
+all: deps $(OBJ_DIR) $(OBJS)
 
-# Compile parser source files
+# Compile exec source files
 $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
-	$(CC) $(CFLAGS) -I$(EXPANDER_DIR) -c $< -o $@
+	$(CC) $(CFLAGS) -I$(ENV_DIR) -I$(PARSER_DIR) -I$(SIGNALS_DIR) -c $< -o $@
 
-# Build expander_objs
-expander_objs:
-	$(MAKE) -C $(EXPANDER_DIR)
+# Build dependencies
+deps:
+	$(MAKE) -C $(ENV_DIR)
+	$(MAKE) -C $(PARSER_DIR)
+	$(MAKE) -C $(SIGNALS_DIR)
 
-# Clean only parser objs
+# Clean only exec objs
 clean:
 	rm -rf $(OBJ_DIR)
 
-# Clean parser + expander
+# Clean exec + dependencies
 fclean: clean
-	$(MAKE) -C $(EXPANDER_DIR) fclean
+	$(MAKE) -C $(ENV_DIR) fclean
+	$(MAKE) -C $(PARSER_DIR) fclean
+	$(MAKE) -C $(SIGNALS_DIR) fclean
 
 re: fclean all
 
-.PHONY: all clean fclean re expander_objs
+.PHONY: all clean fclean re deps
