--- a/burhan/srcs/expander/Makefile
+++ b/burhan/srcs/expander/Makefile
@@ -6,7 +6,7 @@
 #    By: bhajili <bhajili@student.42abudhabi.ae>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/15 10:49:40 by bhajili           #+#    #+#              #
-#    Updated: 2025/06/23 21:05:43 by bhajili          ###   ########.fr        #
+#    Updated: 2025/06/29 10:54:00 by bhajili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,10 @@
 SRC_DIR        = .
 OBJ_DIR        = ./objs
 LEXER_DIR      = ../lexer
+ENV_DIR        = ../env
+
 LEXER_OBJ_DIR  = $(LEXER_DIR)/objs
+ENV_OBJ_DIR    = $(ENV_DIR)/objs
 
 # Sources & Objects
 SRCS    = expander_00.c \
@@ -26,27 +29,29 @@ OBJS    = $(SRCS:%.c=$(OBJ_DIR)/%.o)
 include ../../Makefile.inc
 
 # Rules
-all: lexer_objs $(OBJ_DIR) $(OBJS)
+all: dependencies $(OBJ_DIR) $(OBJS)
 
 # Compile lexer source files
 $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
-	$(CC) $(CFLAGS) -I$(LEXER_DIR) -c $< -o $@
+	$(CC) $(CFLAGS) -I$(LEXER_DIR) -I$(ENV_DIR) -c $< -o $@
 
-# Build lexer_utils
-lexer_objs:
+# Build dependencies
+dependencies:
+	$(MAKE) -C $(ENV_DIR)
 	$(MAKE) -C $(LEXER_DIR)
 
 # Clean only expander objs
 clean:
 	rm -rf $(OBJ_DIR)
 
-# Clean expander + lexer
+# Clean expander + dependencies
 fclean: clean
 	$(MAKE) -C $(LEXER_DIR) fclean
+	$(MAKE) -C $(ENV_DIR) fclean
 
 re: fclean all
 
-.PHONY: all clean fclean re lexer_objs
+.PHONY: all clean fclean re dependencies
