--- a/burhan/srcs/lexer/Makefile
+++ b/burhan/srcs/lexer/Makefile
@@ -6,7 +6,7 @@
 #    By: bhajili <bhajili@student.42abudhabi.ae>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/15 13:33:47 by bhajili           #+#    #+#              #
-#    Updated: 2025/06/18 19:47:03 by bhajili          ###   ########.fr        #
+#    Updated: 2025/06/29 11:17:50 by bhajili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,8 @@
 SRC_DIR        = .
 OBJ_DIR        = ./objs
 TOKEN_DIR      = ../token
-TOKEN_OBJ_DIR  = $(TOKEN_DIR)/objs
+
+ENV_OBJ_DIR    = $(TOKEN_DIR)/objs
 
 # Sources & Objects
 SRCS    = lexer.c
@@ -23,8 +24,8 @@ OBJS    = $(SRCS:%.c=$(OBJ_DIR)/%.o)
 # Include shared flags (optional)
 include ../../Makefile.inc
 
-# Default rule
-all: token_objs $(OBJ_DIR) $(OBJS)
+# Rules
+all: dependencies $(OBJ_DIR) $(OBJS)
 
 # Compile lexer source files
 $(OBJ_DIR):
@@ -33,18 +34,18 @@ $(OBJ_DIR):
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) -I$(TOKEN_DIR) -c $< -o $@
 
-# Build token_utils
-token_objs:
+# Build dependencies
+dependencies:
 	$(MAKE) -C $(TOKEN_DIR)
 
-# Clean only lexer objs
+# Clean only expander objs
 clean:
 	rm -rf $(OBJ_DIR)
 
-# Clean lexer + token
+# Clean expander + dependencies
 fclean: clean
 	$(MAKE) -C $(TOKEN_DIR) fclean
 
 re: fclean all
 
-.PHONY: all clean fclean re token_objs
+.PHONY: all clean fclean re dependencies
