--- a/burhan/srcs/signals/Makefile
+++ b/burhan/srcs/signals/Makefile
@@ -6,26 +6,23 @@
 #    By: bhajili <bhajili@student.42abudhabi.ae>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/20 15:37:48 by bhajili           #+#    #+#              #
-#    Updated: 2025/06/20 15:39:47 by bhajili          ###   ########.fr        #
+#    Updated: 2025/06/29 11:11:55 by bhajili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # Directories
 SRC_DIR     = .
 OBJ_DIR     = ./objs
-LIBFT_DIR   = ../../libft
-LIBFT       = $(LIBFT_DIR)/libft.a
 
 # Sources & Objects
 SRCS        = signals_utils_00.c
-
 OBJS        = $(SRCS:%.c=$(OBJ_DIR)/%.o)
 
 # Include shared flags (optional)
 include ../../Makefile.inc
 
 # Rules
-all: $(LIBFT) $(OBJ_DIR) $(OBJS)
+all: $(OBJ_DIR) $(OBJS)
 
 $(LIBFT):
 	$(MAKE) -C $(LIBFT_DIR)
@@ -34,14 +31,12 @@ $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
 
 $(OBJ_DIR)/%.o: %.c
-	$(CC) $(CFLAGS) -I$(LIBFT_DIR) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -rf $(OBJ_DIR)
-	$(MAKE) -C $(LIBFT_DIR) clean
 
 fclean: clean
-	$(MAKE) -C $(LIBFT_DIR) fclean
 
 re: fclean all
 
