--- a/burhan/srcs/expander/Makefile
+++ b/burhan/srcs/expander/Makefile
@@ -3,21 +3,23 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: bhajili <bhajili@student.42abudhabi.ae>    +#+  +:+       +#+         #
+#    By: bhajili <bhajili@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/15 10:49:40 by bhajili           #+#    #+#              #
-#    Updated: 2025/07/02 14:41:30 by bhajili          ###   ########.fr        #
+#    Updated: 2025/07/03 07:02:54 by bhajili          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # Directories
-SRC_DIR        = .
-OBJ_DIR        = ./objs
-LEXER_DIR      = ../lexer
-ENV_DIR        = ../env
+SRC_DIR         = .
+OBJ_DIR         = ./objs
+LEXER_DIR       = ../lexer
+ENV_DIR         = ../env
+SIGNALS_DIR     = ../signals
 
-LEXER_OBJ_DIR  = $(LEXER_DIR)/objs
-ENV_OBJ_DIR    = $(ENV_DIR)/objs
+LEXER_OBJ_DIR   = $(LEXER_DIR)/objs
+ENV_OBJ_DIR     = $(ENV_DIR)/objs
+SIGNALS_OBJ_DIR = $(SIGNALS_DIR)/objs
 
 # Sources & Objects
 SRCS    = expander.c \
@@ -37,12 +39,13 @@ $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
-	$(CC) $(CFLAGS) -I$(LEXER_DIR) -I$(ENV_DIR) -c $< -o $@
+	$(CC) $(CFLAGS) -I$(LEXER_DIR) -I$(ENV_DIR) -I$(SIGNALS_DIR) -c $< -o $@
 
 # Build dependencies
 dependencies:
 	$(MAKE) -C $(ENV_DIR)
 	$(MAKE) -C $(LEXER_DIR)
+	$(MAKE) -C $(SIGNALS_DIR)
 
 # Clean only expander objs
 clean:
@@ -52,6 +55,7 @@ clean:
 fclean: clean
 	$(MAKE) -C $(LEXER_DIR) fclean
 	$(MAKE) -C $(ENV_DIR) fclean
+	$(MAKE) -C $(SIGNALS_DIR) fclean
 
 re: fclean all
 
